@@ -35,8 +35,10 @@ GNU grep NEWS                                    -*- outline -*-
 
 ** New features
 
-  If no file operand is given, grep -r now searches the working directory.
-  Formerly it ignored the -r and searched standard input nonrecursively.
+  If no file operand is given, and a command-line -r or equivalent
+  option is given, grep now searches the working directory.  Formerly
+  grep ignored the -r and searched standard input nonrecursively.
+  An -r found in GREP_OPTIONS does not have this new effect.
 
   grep now supports color highlighting of matches on MS-Windows.
 
